--- a/templates/sae14/cv.html.twig
+++ b/templates/sae14/cv.html.twig
@@ -1,28 +1,24 @@
 {% extends "base.html.twig" %}
-    {% block body %}
+{% block body %}
     <head>
         <style>
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            border-radius: 8px;
-            width: 45%;
-            outline-style: solid;
-            border: 1px solid black;
-            outline-color: white;
-            outline-width: thin;
-            border-radius: 8px;
-        }
+            img {
+                max-width: 100%;
+                height: auto;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                border-radius: 8px;
+                width: 45%;
+                outline-style: solid;
+                border: 1px solid black;
+                outline-color: white;
+                outline-width: thin;
+                border-radius: 8px;
+            }
         </style>
     </head>
-    
     <body>
-                <img src="CV.png">
-                </img>
-            </div>
-        </div>
+        <img src="CV.png"></img>
     </body>
-    {% endblock %}
+{% endblock %}
