--- a/templates/sae14/portfolioccb.html.twig
+++ b/templates/sae14/portfolioccb.html.twig
@@ -2,11 +2,13 @@
 {% block body %}
     <head>
         <style>
+            /*Pour la couleur de fond des cartes*/
             .aprentissages-critiques{
                 background-color : #A1D6E5;
                 text-align: center;
             }
 
+            /*pour les textes*/
             h3{
                font-family: "Lato", sans-serif;
                color: rgb(4, 12, 41);
@@ -26,49 +28,47 @@
                 text-align: left;
             }
 
+            /*Boutton*/
             .btn {
-            background-color: #06495F;
-            border: none;
-            color: white;
-            padding: 12px 30px;
-            cursor: pointer;
-            font-size: 20px;
+                background-color: #06495F;
+                border: none;
+                color: white;
+                padding: 12px 30px;
+                cursor: pointer;
+                font-size: 20px;
             }
 
+            /*Contour*/
             .fondhome{
-            outline-style: solid;
-            border: 1px solid black;
-            outline-color: white;
-            outline-width: thin;
-            border-radius: 8px;
+                outline-style: solid;
+                border: 1px solid black;
+                outline-color: white;
+                outline-width: thin;
+                border-radius: 8px;
             }
         </style>
     </head>
-    
     <body>
         <div class="container">   
             <div class="fondhome">
                 <br> <h1 style="font-size:2vw;">Connecter les entreprises et les usagers</h1> <br>
-                        <h2 style="font-size:1.5vw;">Chaque case correspond à un apprentissage critique réalisé durant ma première année de formation, avec ce que j'ai acquis et un document 
-                        avec les tâches réalisées en classe (bouton "Download") :
-                        </h2> <br>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <div class="aprentissages-critiques">
-                                        <h3 style="font-size:1.5vw;"> Déployer des supports de transmission :</h3>
-                                        <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
-                                        <h5 style="font-size:1vw"> - Réaliser un câblage horizontal (sur une baie à étage) <br> - Souder une fibre optique</h5>
-                                        <button class="btn"><a href="CCB - Déployer des supports de transmission.docx" download><i class="fa fa-download"></i> Download</button></a>
-                                                <div class="progress">
-                                                    <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
-                                                </div>
-                                    </div>
-                                </div>
+                <h2 style="font-size:1.5vw;">Chaque case correspond à un apprentissage critique réalisé durant ma première année de formation, avec ce que j'ai acquis et un document 
+                avec les tâches réalisées en classe (bouton "Download") :</h2> <br>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="aprentissages-critiques">
+                            <h3 style="font-size:1.5vw;"> Déployer des supports de transmission :</h3>
+                            <h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4>
+                            <h5 style="font-size:1vw"> - Réaliser un câblage horizontal (sur une baie à étage) <br> - Souder une fibre optique</h5>
+                            <button class="btn"><a href="CCB - Déployer des supports de transmission.docx" download><i class="fa fa-download"></i> Download</button></a>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé
                                 </div>
                             </div>
-                        </div>    
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-</body>
-
+        </div>    
+    </body>
 {% endblock %}
