--- a/templates/sae14/quisuisje.html.twig
+++ b/templates/sae14/quisuisje.html.twig
@@ -2,145 +2,139 @@
 {% block body %}
     <head>
         <style>
-                /* Center website */
-                .main {
+            /*pour les textes*/
+            h1{
+                font-family: "Lato", sans-serif;
+                font-size: 40px;
+                color: rgb(0, 255, 179);
+                text-align: center;
+                padding: 10px;
+            }
+
+            h3{
+                text-align: center;
+            }
+            /* Alignement de la page*/
+            .main {
                 max-width: 1000px;
                 margin: auto;
-                }
+            }
 
-                h1{
-                    font-family: "Lato", sans-serif;
-                    font-size: 40px;
-                    color: rgb(0, 255, 179);
-                    text-align: center;
-                    padding: 10px;
-                }
-
-                h3{
-                    text-align: center;
-                }
-                .row {
+            .row {
                 margin: 8px -16px;
-                }
+            }
 
-                /* Add padding BETWEEN each column */
-                .row,
-                .row > .column {
+            .row,
+            .row > .column {
                 padding: 8px;
-                }
+            }
 
-                /* Create four equal columns that floats next to each other */
-                .column {
+            .column {
                 float: left;
                 width: 25%;
-                }
+            }
 
-                /* Clear floats after rows */ 
-                .row:after {
+            .row:after {
                 content: "";
                 display: table;
                 clear: both;
-                }
+            }
 
-                /* Content */
-                .content {
+            .content {
                 background-color: white;
                 padding: 10px;
                 border-radius: 8px;
-                }
+            }
 
-                /* Responsive layout - makes a two column-layout instead of four columns */
-                @media screen and (max-width: 900px) {
-                .column {
-                    width: 50%;
-                }
-                }
+            /* Responsive */
+            @media screen and (max-width: 900px) {
+            .column {
+                width: 50%;
+            }
+            }
 
-                /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-                @media screen and (max-width: 600px) {
-                .column {
-                    width: 100%;
-                }
-                }
+            @media screen and (max-width: 600px) {
+            .column {
+                width: 100%;
+            }
+            }
 
-                .fondhome{
-                    background: 
-                    opacity: 0.5;
-                    outline-style: solid;
-                    border: 1px solid black;
-                    outline-color: white;
-                    outline-width: thin;
-                    border-radius: 8px;
-                }
+            .fondhome{
+                background: 
+                opacity: 0.5;
+                outline-style: solid;
+                border: 1px solid black;
+                outline-color: white;
+                outline-width: thin;
+                border-radius: 8px;
+            }
 
-                .button {
-                    display: block;
-                    width: 100%;
-                    border: none;
-                    background-color: red;
-                    color: white;
-                    padding: 14px 28px;
-                    font-size: 16px;
-                    cursor: pointer;
-                    text-align: center;
-                    border-radius: 8px;
-                }
+            .button {
+                display: block;
+                width: 100%;
+                border: none;
+                background-color: red;
+                color: white;
+                padding: 14px 28px;
+                font-size: 16px;
+                cursor: pointer;
+                text-align: center;
+                border-radius: 8px;
+            }
 
-                .button:hover {
-                    background-color: rgb(26, 185, 206);
-                    color: white;
-                }
+            .button:hover {
+                background-color: rgb(26, 185, 206);
+                color: white;
+            }
 
-                .fa-youtube {
-                    padding: 5px;
-                    font-size: 20px;
-                    width: 70px;
-                    text-align: center;
-                    text-decoration: none;
-                    margin: 5px 2px;
-                    background: #bb0000;
-                    color: white;
-                }
-                .fa-youtube:hover{
-                    color: white;
-                }
+            .fa-youtube {
+                padding: 5px;
+                font-size: 20px;
+                width: 70px;
+                text-align: center;
+                text-decoration: none;
+                margin: 5px 2px;
+                background: #bb0000;
+                color: white;
+            }
+            .fa-youtube:hover{
+                color: white;
+            }
 
-                .column1 {
+            .column1 {
                 float: left;
                 width: 50%;
-                }
+            }
 
-                .content1 {
+            .content1 {
                 background-color: white;
                 padding: 10px;
                 border-radius: 8px;
-                }
+            }
 
-                .row,
-                .row > .column1 {
+            .row,
+            .row > .column1 {
                 padding: 8px;
-                }
+            }
 
-                /* Responsive layout - makes a two column-layout instead of four columns */
-                @media screen and (max-width: 900px) {
-                .column1 {
-                    width: 50%;
-                }
-                }
+            /* Responsive partie passions */
+            @media screen and (max-width: 900px) {
+            .column1 {
+                width: 50%;
+            }
+            }
 
-                /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-                @media screen and (max-width: 600px) {
-                .column1 {
-                    width: 100%;
-                }
-                }
+            @media screen and (max-width: 600px) {
+            .column1 {
+                width: 100%;
+            }
+            }
         </style>
     </head>
-    
-<body>
-    <div class="container">   
-        <div class="fondhome">
-            <h1> Mes réalisations</h1><br>
+    <body>
+        <div class="container">   
+            <div class="fondhome">
+                <h1> Mes réalisations</h1><br>
                 <div class="row">
                     <div class="column">
                         <div class="content">
@@ -178,30 +172,28 @@
                         </div>
                     </div>
                 </div>
-        </div > 
+            </div > 
             <div class="fondhome">    
                 <h1>Mes loisirs et passions</h1><br>
-                    <div class="row">
-                        <div class="column1">
-                            <div class="content1">
-                                <img src="collection2.jpg" style="width:100%">
-                                <h3>Mes collections</h3>
-                                <p>Je collectionne près de 3000 numéros du magazine "France Football" allant des années 80 à aujourd'hui. Il a fallu beaucoup de patience pendant plus de 5 ans pour retrouver et ne manquer aucun numéro.</p>
-                                <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs...soit beaucoup de choses qui touchent au foot</p>
-                            </div>
+                <div class="row">
+                    <div class="column1">
+                        <div class="content1">
+                            <img src="collection2.jpg" style="width:100%">
+                            <h3>Mes collections</h3>
+                            <p>Je collectionne près de 3000 numéros du magazine "France Football" allant des années 80 à aujourd'hui. Il a fallu beaucoup de patience pendant plus de 5 ans pour retrouver et ne manquer aucun numéro.</p>
+                            <p>Je possède également des livres qui traîtent du même sujet, des DVD et VHS de matchs...soit beaucoup de choses qui touchent au foot</p>
                         </div>
-                        <div class="column1">
-                            <div class="content1">
-                                <img src="foot1.jpg" style="width:100%">
-                                <h3>Mes activités</h3>
-                                <p>Depuis mes 4 ans, je joue au foot en club. Je suis actuellement dans l'équipe sénior, qui évolue en Départemental 3 
-                                (soit la 11ème division du football en France).</p>
-                            </div>
+                    </div>
+                    <div class="column1">
+                        <div class="content1">
+                            <img src="foot1.jpg" style="width:100%">
+                            <h3>Mes activités</h3>
+                            <p>Depuis mes 4 ans, je joue au foot en club. Je suis actuellement dans l'équipe sénior, qui évolue en Départemental 3 
+                            (soit la 11ème division du football en France).</p>
                         </div>
-                
-        </div>
-        </div>
-    </div>   
-</body>
-
+                    </div>
+                </div>
+            </div>
+        </div>   
+    </body>
 {% endblock %}
