--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Site Alexis Barou!{% endblock %}</title>
+        <title>{% block title %}Site Alexis Barou{% endblock %}</title>
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="bootstrap.css">
         <link rel="shortcut icon" href="photocontact.ico" type="image/x-icon">
